cleaned up / reformatted code according to the new coding conventions
git-svn-id: svn://svn-srv/skosigns/trunk@109 702c9929-26ad-4ec3-b8b7-334534ed37ec